# key-manager

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  docker-compose.yml  setup.sh
.github/workflows/: DocGenerator.yml  building.yml  codeql-analysis.yml  test-compiler-versions.yml
cmake/: CPM.cmake
docs/: CMakeLists_8txt.html  add__password__state_8cpp.html  add__password__state_8cpp__incl.map  add__password__state_8cpp__incl.md5  add__password__state_8hpp.html  add__password__state_8hpp__dep__incl.map  add__password__state_8hpp__dep__incl.md5  add__password__state_8hpp__incl.map  add__password__state_8hpp__incl.md5  add__password__state_8hpp_source.html  add__password__window_8cpp.html  add__password__window_8cpp__incl.map  add__password__window_8cpp__incl.md5  add__password__window_8hpp.html  add__password__window_8hpp__dep__incl.map  add__password__window_8hpp__dep__incl.md5  add__password__window_8hpp__incl.map  add__password__window_8hpp__incl.md5  add__password__window_8hpp_source.html  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8py.html  base__state_8cpp.html  base__state_8cpp__incl.map  base__state_8cpp__incl.md5  base__state_8hpp.html  base__state_8hpp__dep__incl.map  base__state_8hpp__dep__incl.md5  base__state_8hpp__incl.map  base__state_8hpp__incl.md5  base__state_8hpp_source.html  base__widget_8cpp.html  base__widget_8cpp__incl.map  base__widget_8cpp__incl.md5  base__widget_8hpp.html  base__widget_8hpp__dep__incl.map  base__widget_8hpp__dep__incl.md5  base__widget_8hpp__incl.map  (+366 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+37 more)
html/: metadata.html
img/icons/: logo.xbm
include/entities/: password.hpp
include/states/: add_password_state.hpp  base_state.hpp  login_state.hpp  menu_state.hpp  password_generator_state.hpp  password_info_state.hpp  password_manager_state.hpp  set_password_state.hpp
include/utility/: crypto.hpp  generic.hpp
include/widgets/: base_widget.hpp  custom_button.hpp  custom_label.hpp  custom_line_edit.hpp  password_actions.hpp  password_toggle.hpp
include/windows/: add_password_window.hpp  base_window.hpp  main_window.hpp
scripts/: CMakeLists.txt  cmake_helper.sh  copy_files.cpp  copy_files.sh
src/: CMakeLists.txt  app.cpp  app.py
src/GUI/Frames/: menu.py
src/GUI/Windows/: root.py
src/GUI/frames/: menu.py  password_creator.py  password_manager.py
src/GUI/windows/: root.py
src/entities/: password.cpp
src/gui/frames/: menu.py  settings.py
src/gui/windows/: root.py
src/states/: add_password_state.cpp  base_state.cpp  login_state.cpp  menu_state.cpp  password_generator_state.cpp  password_info_state.cpp  password_manager_state.cpp  set_password_state.cpp
src/utility/: crypto.cpp  generic.cpp  graphics.py
src/widgets/: base_widget.cpp  custom_button.cpp  custom_label.cpp  custom_line_edit.cpp  password_actions.cpp  password_toggle.cpp
src/windows/: add_password_window.cpp  base_window.cpp  main_window.cpp
test/: IWYU.sh  all_tests.sh
test/unit_tests/: CMakeLists.txt
test/unit_tests/utility/: test_crypto.cpp
